# WashU-Research

./: .gitignore  CMakeLists.txt  CNAME  LICENSE  README.html  README.md  blur_faces.m  blur_faces.m~  driver.sh  index.html  nohup.out  paper_teaser.jp2  params.json  pipeLine.sh  scaleFinder.py  test  test.cpp
CilkPlus/: CilkPlusTest  CilkPlusTest.cpp
DisplayImage/: CMakeCache.txt  CMakeLists.txt  DisplayImage  DisplayImage.cpp  Makefile  cmake_install.cmake
ForFun/: CMakeCache.txt  CMakeLists.txt  ForFun  ForFun.cpp  Makefile  cmake_install.cmake
ImageJoiner/: CMakeCache.txt  CMakeLists.txt  ImageJoiner  ImageJoiner.cpp  Makefile  cmake_install.cmake
PathRectifier/: GurobiPath.html  Makefile  Path.html  Path.txt  Path.txt~  Path0.txt  Path1.txt  PathRectifier  PathRectifier.cpp  startPath.html  startPath.txt
SURFheatMap/: CMakeLists.txt  heatMap  heatMap.cpp
Test/: CMakeCache.txt  CMakeLists.txt  EigenTest  EigenTest.cpp  GurobiTest  GurobiTest.cpp  Makefile  cmake_install.cmake  test  test.cpp
VideoToPanorama/: CMakeCache.txt  CMakeLists.txt  Makefile  VideoToPanorama  VideoToPanorama.cpp  cmake_install.cmake  videoToImages.py  videoToPanorama.sublime-workspace
bareBoneJoiner/: CMakeLists.txt  bare_bones_joiner.cpp
blur_faces/: .gitignore  CSE3  CSE4  CSE5  DUC1  DUC2  application.py
blur_faces/blur_util/: CMakeLists.txt  blur.cpp
blur_faces/flask_applet/: application.py  requirements.txt
blur_faces/flask_applet/ReleaseData/: copy_all.sh
blur_faces/flask_applet/scripts/: tsfmt.json
blur_faces/flask_applet/scripts/ts/: connection.ts  main.ts
blur_faces/flask_applet/templates/: annotate.html  floor.html  header.html  main.html
blur_faces/scripts/: tsconfig.json
blur_faces/scripts/ts/: connection.ts  jquery.d.ts  main.ts
blur_faces/static/: index.html
blur_faces/templates/: blur.html  floor.html
buid/: CMakeCache.txt
buid/globals/: globals_lib_CXX_cotire.cmake
buid/joiner/: joiner  joiner_CXX_None_cotire.cmake  joiner_CXX_cotire.cmake
buid/placeScan/: placeScan  placeScan_CXX_cotire.cmake
buid/placeScan/cotire/: placeScan_CXX_prefix.cxx  placeScan_CXX_prefix.hxx  placeScan_CXX_unity.cxx
buid/preprocessor/: preprocessor  preprocessor_CXX_None_cotire.cmake  preprocessor_CXX_cotire.cmake
buid/scanDensity/: scanDensity  scanDensity_CXX_cotire.cmake
buid/scanDensity/cotire/: scanDensity_CXX_prefix.cxx  scanDensity_CXX_prefix.hxx  scanDensity_CXX_unity.cxx
cloudNormalVisualization/: CMakeCache.txt  CMakeLists.txt  Makefile  cloudNormalVisualization  cloudNormalVisualization.cpp  cloudNormalVisualization.sublime-workspace  cmake_install.cmake
cloudNormals/: CMakeCache.txt  CMakeLists.txt  Makefile  cloudNormals  cloudNormals.cpp  cloudNormals.sublime-workspace  cmake_install.cmake
data/: body.html  body.md  footer.html  header.html  index.html  index.md  makefile
dominateDirections/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  dominateDirections  dominateDirections.cpp  dominateDirections.sublime-workspace
getRotations/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  getRotations  getRotations.cpp
globals/: CMakeCache.txt  CMakeLists.txt  DirectVoxel.hpp  FeatureVoxel.cpp  FeatureVoxel.hpp  HashVoxel.hpp  cmake_install.cmake  driver.sh  pipeLine.sh  scaleFinder.py  scan_gflags.cpp  scan_gflags.h  scan_typedefs.cpp  scan_typedefs.hpp  scoreAnalyzer.py  temp.txt  test
javascripts/: prism.min.js
joiner/: CMakeLists.txt  join_2.cpp  joiner  joiner.cpp
k4pcs/: CMakeLists.txt  k4pcs.cpp  k4pcs.h
placeScan/: CMakeCache.txt  CMakeLists.txt  FindGUROBI.cmake  Makefile  cmake_install.cmake  confidence.cpp  doorDetector.cpp  dt.cpp  dt.hpp  findGUROBI.cmake  getRotations  getRotations.cpp  highOrder.cpp  highOrder.h  multiLabeling.cpp  out.txt  panoramaMatcher.cpp  placeScan  placeScan.cpp  placeScan.h  placeScan.sublime-project  placeScan.sublime-workspace  placeScanHelper.cpp  placeScanHelper2.cpp  placeScanHelper2.cpp.orig  placeScanHelper2_BACKUP_12241.cpp  placeScanHelper2_REMOTE_12241.cpp  placeScan_confidence.h  placeScan_doorDetector.h  placeScan_multiLabeling.h  placeScan_multiLabelingHelper.h  placeScan_panoramaMatcher.h  placeScan_placeScan.h  placeScan_placeScanHelper.h  placeScan_placeScanHelper2.h  positions.txt  tmp.txt
pointcloud_render/: CMakeLists.txt  framerecorder.cpp  framerecorder.h  main.cpp  pointcloud_renderer.pro  runner.py  widget.cpp  widget.h
preprocessor/: CMakeCache.txt  CMakeLists.txt  convert_to_ply.cpp  getRotations.cpp  getRotations.h  preprocessor.cpp  preprocessor.h  xMap.txt  yMap.txt
scanDensity/: 3DInfo.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  centerOfScan  centerOfScan.cpp  cmake_install.cmake  csvToBinary  csvToBinary.cpp  driver.cpp  preprocessor  preprocessor.cpp  scanDensity  scanDensity.cpp  scanDensity.sublime-workspace  scanDensity_3DInfo.h  scanDensity_scanDensity.h
stylesheets/: prism.css  stylesheet.css
test/: CMakeLists.txt
utils/: CMakeLists.txt  DirectVoxel.hpp  FeatureVoxel.hpp  HashVoxel.hpp  RGBD_utils.cpp  RGBD_utils.hpp  driver.sh  etw_utils.cpp  etw_utils.hpp  pipeLine.sh  scaleFinder.py  scan_gflags.cpp  scan_gflags.h
