cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(cloudNormalVisualization)
find_package(PCL REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -O3")
add_executable(cloudNormalVisualization cloudNormalVisualization.cpp)
target_link_libraries(cloudNormalVisualization ${PCL_LIBRARIES})
