cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(cloudNormals)
find_package(PCL 1.7 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -O3")
add_executable(cloudNormals cloudNormals.cpp)
target_link_libraries(cloudNormals ${PCL_LIBRARIES})
